Bug 214195 - Switching to 'Show Simple View' is extremely slow with 800 contacts
Summary: Switching to 'Show Simple View' is extremely slow with 800 contacts
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-11 23:53 UTC by Sabine Faure
Modified: 2010-07-08 20:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-11-11 23:53:52 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch Kontact and go to KAB
- Create or import about 800 contacts
- Go to Settings menu/Show Simple View
- Check the 'Show Simple View' check box within the menu

Nothing happens at first but after a few minutes KAddressBook switches to simple view.

Also:
- Click on the 'Next' button from the Simple View display mode

Nothing happens at first but after a while the next contact is displayed.

Would it be possible to improve the speed on those functionalities?

Trunk, Svn Rev 1047503
Comment 1 Tobias Koenig 2010-05-15 01:06:37 UTC
SVN commit 1126822 by tokoe:

Do not use the allContacts model for the simple view, this is not
needed anymore with the new selection based model and improves
performance dramatically

BUG: 214195


 M  +0 -11     mainwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1126822
Comment 2 Sabine Faure 2010-05-17 19:30:44 UTC
I tried to retest this today but atm I cannot copy contact or import 800 contacts either so I cannot test this.

I will try to retest this once those regressions are fixed.

Trunk, Svn Rev 1127799
Comment 3 Sabine Faure 2010-07-08 20:31:36 UTC
It is corrected now.

Switching from the main view to the simple view is done immediately now even with more than 800 contacts in an addressbook.

Trunk, Svn Rev 1147490