Do not use the allContacts model for the simple view, this is not needed anymore with the new selection based model and improves performance dramatically

BUG: 214195

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1126822